# extend

./: README.md  dune-project  fast_log.opam
_build/: log
fast_log/: dune-project  fast_log.opam  runner.ml
fast_log/bench/: dune  run_benchmarks.ml  runner.ml
fast_log/lib/: dune  logger.ml  logger_intf.ml  mpsc.ml  mpsc_bounded.ml  output.ml  output.mli  queue_intf.ml  spsc.ml  spsc_bounded.ml  spsc_unbounded.ml
fast_log/ppx/: ppx_log.ml  ppx_log_printer.ml
fast_log/test/: dune
lib/: dune  logger.ml  logger_intf.ml  spsc.ml
ppx/: dune
ppx_defer/: README.md  dune-project  ppx_defer.opam
ppx_defer/lib/: dune  ppx_defer.ml  ppx_defer_runtime.ml
ppx_defer/test/: dune  run_benchmarks.ml  runner.sh  test_ppx_defer.ml
